# rps

./: .dockerignore  .env.example  .gitignore  .travis.yml  Dockerfile  LICENSE  README.md  build_push.sh  docker-compose.build.yml  docker-compose.ci.yml  docker-compose.yml  exec_api.sh  fix_owner.sh  managepy.sh  push.sh  travis_build_push.sh
api/: .dockerignore  Dockerfile  cmd.sh  m.sh  manage.py  pyproject.toml  requirements.txt  run_checks.sh
api/auth/: urls.py  views.py
api/core/: admin.py  filters.py  models.py  query.py  serializers.py  urls.py  util.py  views.py
api/core/fixtures/: init.json
api/core/migrations/: 0001_initial.py  0002_auto_20190823_0034.py  0002_auto_20190903_2126.py  0002_match_loser.py  0003_auto_20190906_2204.py  0003_auto_20191009_2135.py  0004_auto_20190906_2204.py  0005_auto_20190906_2212.py  0006_auto_20190913_0330.py  0007_auto_20190916_0015.py
api/core/serializers/: __init__.py  auth.py  login.py  matches.py  players.py
api/core/tests/: factories.py  test_base.py  test_query.py
api/docker/: cmd.sh  crontab  entrypoint.sh
api/livematch/: __init__.py  admin.py  apps.py  consumers.py  error.py  message.py  models.py  routing.py  serializers.py  urls.py  views.py
api/livematch/migrations/: 0001_initial.py  0002_auto_20190806_2247.py  0003_livematch_config.py  (+12 more)
api/match/: consumers.py
api/mgt/: apps.py  serializers.py  urls.py  views.py
api/rps/: asgi.py  routing.py  settings.py  urls.py  wsgi.py
api/slack/: parser.py  urls.py  views.py
slack-api/: Dockerfile  m.sh  pyproject.toml
slack-api/src/: app.py  manage.py
(+205 files in other folders)
